--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     </main>
 
     <footer>
-        <p id="credito">Site Criado por Luiz Fabiano</p>
+        <p>Site Criado por Luiz Fabiano</p>
     </footer>
 
 </body>
