--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o <span><a href="https://inkscape.org/pt-br/" class="link" target="_blank" rel="external">Inkscape &#x1F517;</a></span>; (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
         <picture>
-                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png">
+                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png" class="pequena">
                 <img src="imagens/dan-droids.png" alt="Robos">
         </picture>
 
@@ -45,7 +45,7 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span><a href="https://www.irinablok.com/android" target="_blank" rel="external">Irina Blok &#x1F517</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
         <picture>
-                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg">
+                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg" class="pequena">
                 <img src="imagens/irina-blok.jpg" alt="Islustradora da logo Android">
         </picture>
 
