--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             A primeira tentativa de criar um mascote surgiu em 2007 e veio de um desenvolvedor chamado Dan Morrill. Ele conta que abriu o <span><a href="https://inkscape.org/pt-br/" class="link" target="_blank" rel="external">Inkscape &#x1F517;</a></span>; (software livre para vetorização de imagens) e criou sua própria versão de robô. O objetivo era apenas personificar o sistema apenas para a a sua equipe, não existia nenhuma solicitação da empresa para a criação de um mascote.</p>
 
         <picture>
-                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png" class="pequena">
+                <source media="(max-width: 650px)" srcset="imagens/dan-droids-pq.png">
                 <img src="imagens/dan-droids.png" alt="Robos">
         </picture>
 
