--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <p>A ideia de ter um mascote foi amadurecendo e a missão foi passada para uma profissional da área. A ilustradora Russa <span><a href="https://www.irinablok.com/android" target="_blank" rel="external">Irina Blok &#x1F517</a></span>, também funcionária do Google, ficou com a missão de representar o pequeno robô de uma maneira mais agradável.</p>
 
         <picture>
-                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg" class="pequena">
+                <source media="(max-width: 600px)" srcset="imagens/irina-blok-pq.jpg">
                 <img src="imagens/irina-blok.jpg" alt="Islustradora da logo Android">
         </picture>
 
