Resolvendo o problema da Tabela

--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
                             <li> 5.0 - <abbr title="Pirulito">Lolipop</abbr>
                             <li> 6.0 - <abbr title="Marshmallow">Marshmallow</abbr>
                             <li> 7.0 - <abbr title="Torrone">Nougat</abbr>
-                            <li> 8.0 -  <abbr title="Oreo">Pie</abbr>
-                            <li> 9.0 - <abbr title="Torta">oreo</abbr>
+                            <li> 8.0 -  <abbr title="Oreo">Oreo</abbr>
+                            <li> 9.0 - <abbr title="Torta">Pie</abbr>
                   </ul>
               </div>
           
